Fix web spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -121,6 +121,7 @@ min-height:100vh;
 	min-height:400px;
 	background-color: black;
 	color:white;
+	position:relative;
 }
 
 .inputColumns {
@@ -157,9 +158,6 @@ min-height:100vh;
 }
 
 .inputColumns::after {
-	/* content: '';
-	height: 100%; 
-	width: 1px; */
 	position: absolute;
 	right: 0;
 	top: 0; 
@@ -221,28 +219,29 @@ min-height:100vh;
 }
 
 .step {
-	font-size: 3.5rem;
-	padding-top: 4rem;
+	font-size: 2.5rem;
 	padding-bottom: 1rem;
+	padding-top: 10%;
 }
 
 .step::before{
     content: '\a0\a0\a0\a0\a0\a0\a0\a0';
     display: block;
-    position: relative;
+    position: absolute;
     text-decoration: underline;
     width: 40px;
     overflow: hidden;
-    top: 62px;
+    top: 7%;
     left: 50%;
     margin-left: -19px;
 }
 
 .instructions {
-	font-size: 2.5rem;
+	font-size: 2rem;
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
 	font-style: normal;
+	font-family: arial;
 } 
 
 .mic-wrapper {
